tests/paczka1/small_fuzzy/47485869.err
Error in line 5: SqBXm8hO6 S558 14,8
Error in line 6: SqBXm8hO6 S449 68,8
Error in line 9: SqBXm8hO6 S771 12,5
Error in line 2: 5gW0Z5n S993 9,9
Error in line 7: N5zEo S449 53,2
